add title and level
